# autotester

./: .gitignore  .pre-commit-config.yaml  .releaserc.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  e2e.json  pyproject.toml
.github/workflows/: release.yml
examples/base-url/: autotester.yml  workflow.yml
examples/basic/: autotester.yml  workflow.yml
examples/basic-auth/: autotester.yml  workflow.yml
examples/full/: autotester.yml  workflow.yml
examples/posthog/: autotester.yml  workflow.yml
src/autotester/: AnalyzeError.py  AutotesterConfig.py  ContentCleaner.py  E2E.py  GitUtils.py  Report.py  TestFilePattern.py  __init__.py  cli.py  posthog.py  types.py
src/autotester/reporting/: Report.py  ReportRequirements.md
tests/: Dockerfile  __init__.py  docker-compose.yml  test_AutotesterConfig.py  test_ContentCleaner.py  test_E2E.py  test_ResponseParser.py  test_anthropic.py  test_cli.py  test_deepseek.py  test_mistral.py  test_ollama.py  test_openai.py  test_posthog.py  test_types.py
