[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autotester"
version = "0.0.7"
description = "Autotester - E2E testing for your codebase"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Cyberwave Team", email = "info@cyberwave.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pyyaml>=6.0.0",
    "openai>=1.0.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-typescript>=0.23.2",
    "Pygments>=2.19.1",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "browser-use>=0.12.1",
    "dotenv>=0.9.9",
    "black>=23.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "coverage>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Repository = "https://github.com/cyberwaveos/autotester"
Issues = "https://github.com/cyberwaveos/autotester/issues"

[project.scripts]
autotester = "autotester.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = ["tests/codebases"]
filterwarnings = [
    "ignore:cannot collect test class 'TestCase':pytest.PytestCollectionWarning",
    "ignore:cannot collect test class 'TestErrorType':pytest.PytestCollectionWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["src/autotester"]

[tool.hatch.build.targets.sdist]
include = ["src/autotester"]

[tool.hatch.build.targets.wheel.sources]
"src/autotester" = "autotester"
